updated the HTML created question and answers in javascript.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <div id="question-Container" class="hide">
-        <div id="answer-Buttons" class="btn-grid">
+      <div id="question-container" class="hide">
+        <div id="answer-buttons" class="btn-grid">
           <button class="btn">Answer 1</button>
           <button class="btn">Answer 2</button>
           <button class="btn">Answer 3</button>
