--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <div id="question-container" class="hide">
+        <div id="question">Question</div>
         <div id="answer-buttons" class="btn-grid">
           <button class="btn">Answer 1</button>
           <button class="btn">Answer 2</button>
@@ -23,7 +24,7 @@
       </div>
     </div>
     <div class="Score">
-      <span id="right-Answers"></span>
+      <span id="right-answers"></span>
     </div>
     <script src="./assets/script.js"></script>
   </body>
