reworking HTML so I an see the format a bit better

--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
         <hr />
         <!-- added quizset for questions-->
         <div id="quizset">
-          <p id="questions"></p>
+          <p id="questions">Take the Quiz</p>
           <!-- added options for selecting questions-->
           <div id="options" class="options"></div>
-          <button id="btn1" class="button"><span id="opition1"></span></button>
-          <button id="btn2" class="button"><span id="opition2"></span></button>
-          <button id="btn3" class="button"><span id="opition3"></span></button>
-          <button id="btn4" class="button"><span id="opition4"></span></button>
+          <button id="btn1" class="button">
+            Op1<span id="opition1"></span>
+          </button>
+          <button id="btn2" class="button">
+            Op2<span id="opition2"></span>
+          </button>
+          <button id="btn3" class="button">
+            Op3<span id="opition3"></span>
+          </button>
+          <button id="btn4" class="button">
+            Op4<span id="opition4"></span>
+          </button>
         </div>
         <!-- added next question button-->
         <button id="next-btn">Next Qusestion</button>
