reworked CSS by add footer progress timer.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <hr />
         <!-- added quizset for questions-->
-        <div id="quizset">
+        <div id="quizSet">
           <p id="questions">Take the Quiz</p>
           <!-- added options for selecting questions-->
           <div id="options" class="options"></div>
@@ -44,7 +44,7 @@
         <button id="next-btn" class="next-btn btn">Next Qusestion</button>
         <!-- added results-->
         <div id="Score">
-          <p id="right-answers">Retake Test</p>
+          <p id="result">Retake Test</p>
           <button id="retake">Retake</button>
         </div>
         <hr />
