--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <!-- added next question button-->
         <button id="next-btn" class="next-btn btn">Next Qusestion</button>
         <!-- added results-->
-        <div id="Score">
-          <p id="result">Retake Test</p>
+        <div id="score">
+          <p id="result">
+            Congrats. You Passed. <br />
+            Your score is 0.
+          </p>
           <button id="retake">Retake</button>
         </div>
         <hr />
