--- a/index.html
+++ b/index.html
@@ -1,68 +1,60 @@
+<!-- Multiple 
+lines of comments
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>That Quizz</title>
-    <link rel="stylesheet" href="./assets/styles.css" />
+    <title>Quiz App with Timer</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css" />
   </head>
+
   <body>
-    <div class="container">
-      <div id="question-container" class="hide">
-        <!-- added a header-->
-        <header>
-          <h1 id="h1" class="qp">Quizz Questions</h1>
-        </header>
-        <!-- added a tracker-->
-        <div id="tracker">
-          <div class="nos" id="no1">1</div>
-          <div class="nos" id="no2">2</div>
-          <div class="nos" id="no3">3</div>
-          <div class="nos" id="no4">4</div>
-        </div>
-        <hr />
-        <!-- added quizset for questions-->
-        <div id="quizSet">
-          <p id="questions">Take the Quiz</p>
-          <!-- added options for selecting questions-->
-          <div id="options" class="options"></div>
+    <div id="quiz">
+      <header>
+        <h1 id="h1">Quizz</h1>
+      </header>
+      <div id="tracker">
+        <div class="nos" id="no1">1</div>
+        <div class="nos" id="no2">2</div>
+        <div class="nos" id="no3">3</div>
+        <div class="nos" id="no4">4</div>
+      </div>
+      <hr style="margin-bottom: 20px" />
+      <div id="quizSet">
+        <p id="question">Question 1 Text</p>
+        <div id="options" class="options">
           <button id="btn1" class="button">
-            Op1<span id="opition1"></span>
+            <span id="option1">Option1</span>
           </button>
           <button id="btn2" class="button">
-            Op2<span id="opition2"></span>
+            <span id="option2">Option2</span>
           </button>
           <button id="btn3" class="button">
-            Op3<span id="opition3"></span>
+            <span id="option3">Option3</span>
           </button>
           <button id="btn4" class="button">
-            Op4<span id="opition4"></span>
+            <span id="option4">Option4</span>
           </button>
         </div>
-        <!-- added next question button-->
-        <button id="next-btn" class="next-btn btn">Next Qusestion</button>
-        <!-- added results-->
-        <div id="score">
-          <p id="result">
-            Congrats. You Passed. <br />
-            Your score is 0.
-          </p>
-          <button id="retake">Retake</button>
-        </div>
-        <hr />
+        <button id="submit">Next Question</button>
+      </div>
+      <div id="resultBox">
+        <p id="result">
+          Congrats. You passed. <br />
+          Your score is .
+        </p>
+        <button id="retake">Retake Test</button>
+      </div>
+      <hr style="margin-top: 30px" />
 
-        <footer>
-          <p id="progress">Questions 1 of 4</p>
-          <div id="timer">Timer</div>
-        </footer>
-      </div>
-      <!-- added a controls for start button-->
-      <div class="controls">
-        <button id="start-btn" class="start-btn btn">Start</button>
-      </div>
+      <footer>
+        <p id="progress">Question 1 of 4</p>
+        <div id="timer">Timer</div>
+      </footer>
     </div>
-
+    <script src="./assets/questions.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
